# logwatch

./: Makefile  README.md  pyproject.toml
config/: config.yaml
src/: journal_reader.py
test/: journal_reader_test.py
