[project]
name = "logwatch"
version = "0.0.1"
description = ""
authors = [
    {name = "kyoto"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "requests (>=2.33.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.3.1,<27.0.0)"
]
